# Ocaml-Rust-Json-HTTP-RPC

./: .gitignore  Cargo.toml  readme
ocaml-rpc/: default.nix  dune-project  ocaml-rpc.opam
ocaml-rpc/lib/: dune
rpc/src/: jsonrpc.rs
rust/: Cargo.toml
rust/bin_client/: Cargo.toml
rust/bin_client/src/: main.rs
rust/bin_server/: Cargo.toml
rust/bin_server/src/: main.rs
rust/src/: main.rs
