(lang dune 3.0)

(name ocaml-rpc)

(generate_opam_files true)

(package
 (name ocaml-rpc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (dune
   (>= 2.2))
  lwt
  tezos-p2p
  tezos-base
  (tezos-rpc
   (= 17.3))
  (tezos-rpc-http-server
   (= 17.3))
  (tezos-rpc-http-client-unix
   (= 17.3))
  (tezos-client-base-unix
   (= 17.3))))
