[workspace]
members = ["bin_client", "bin_server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = "1.0.197"
bytes = "1.6.0"
serde_json = "1.0.115"
serde_derive = "1.0.197"
