[package]
name = "bin_client"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {workspace = true }
tokio = {workspace = true }
http-body-util = {workspace = true }
hyper-util = {workspace = true }
serde = {workspace = true }
bytes = {workspace = true }
serde_json = {workspace = true }
serde_derive = {workspace = true }
